[project]
name = "proguin"
version = "0.1.0"
description = "CLI productivity task manager"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
proguin = "proguin.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["proguin*"]
exclude = ["data*"]
